--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,33 +12,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Escolha um número de 0 a 10"
+        android:text="@string/choose_a_number_from_0_to_10"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/textoJogar"
+        android:id="@+id/textPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:background="@color/botao_jogar_cor"
-        android:onClick="sortear"
-        android:text="@string/botao_jogar"
+        android:background="@color/button_play_color"
+        android:onClick="draw"
+        android:text="@string/button_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoExibicao" />
 
     <TextView
-        android:id="@+id/textoResultado"
+        android:id="@+id/textResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Nenhum número selecionado"
+        android:text="@string/no_number_selected"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textoJogar" />
+        app:layout_constraintTop_toBottomOf="@+id/textPlay" />
 </androidx.constraintlayout.widget.ConstraintLayout>
