--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#0F0E10</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="botao_jogar_cor">#03DAC5</color>
+    <color name="button_play_color">#DA0340</color>
 </resources>
